--- a/jako22.html
+++ b/jako22.html
@@ -10,5 +10,6 @@
     <h2>BORISE</h2>
     <p>Borise za podobro utre</p>
     <h2>sega</h2>
+    <p>Sega sakam da probam da napram push request</p>
   </body>
 </html>
