--- a/praksa.html
+++ b/praksa.html
@@ -49,5 +49,6 @@
         donations are vital in helping save and improve lives. You can
       </p>
     </div>
+    <p>Click here</p>
   </body>
 </html>
