promena mala  za odenje direktno do meilo i tel

--- a/praksadomasno.html
+++ b/praksadomasno.html
@@ -22,10 +22,12 @@
       <p>
         <u>Address</u> : <sup>64</sup>Vasko Karangelevski,Bitola<sub>7000</sub>
       </p>
-      <p><u>Phone number</u> : <b>075/361-555</b></p>
+      <p>
+        <u>Phone number</u> : <b><a href="tel:+38975361555">075/361-555</a></b>
+      </p>
       <p>
         <u>Email</u> :
-        <a href="https://gmail.com:kiril.bozinovski28@gmail.com" target="_blank"
+        <a href="mailto:kiril.bozinovski28@gmail.com" target="_blank"
           >kiril.bozinovski28@gmail.com</a
         >
       </p>
