--- a/praksadomasno.html
+++ b/praksadomasno.html
@@ -43,6 +43,6 @@
       Јас сум нов во ова но сакам да кажам нешто<br />
       Ќе направам се што можам за да постанам добар <mark>ПРОГРАМЕР</mark>
     </p>
-    <hr / width="450px" align="left">
+    <hr width="450px" align="left" />
   </body>
 </html>
