--- a/domasnotabela.html
+++ b/domasnotabela.html
@@ -7,24 +7,23 @@
     <title>Document</title>
   </head>
   <body>
-    <table border="3">
-      <tr>
+    <table border="2" width="200px">
+      <tr align="center">
         <th colspan="5">1</th>
       </tr>
-      <tr>
+      <tr align="center">
         <td colspan="3">2</td>
         <td colspan="2">3</td>
       </tr>
-      <tr>
-        <td colspan="2">4</td>
+      <tr align="center">
+        <td rowspan="2">4</td>
         <td colspan="2">5</td>
-
-        <td colspan="2">6</td>
-        <td colspan="2">7</td>
+        <td rowspan="2">6</td>
+        <td rowspan="2">7</td>
       </tr>
-      <tr>
-        <td colspan="2">8</td>
-        <td colspan="2">9</td>
+      <tr align="center">
+        <td>8</td>
+        <td>9</td>
       </tr>
     </table>
   </body>
