--- a/praksadomasno.html
+++ b/praksadomasno.html
@@ -14,7 +14,8 @@
     </style>
   </head>
   <body>
-    <img src="slika.jpg" alt="slika" width="300px" height="300px" />
+    <img src="slika.jpg" alt="slika" width="300px" height="300px" /
+    style="border-radius: 50%;">
     <div>
       <h2>Kiril Bozinovski</h2>
       <p><b>Front-end Programer</b></p>
