--- a/praksadomasno.html
+++ b/praksadomasno.html
@@ -5,29 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INFO</title>
-    <style>
-      div {
-        display: inline-block;
-        width: 1000px;
-        height: 100px;
-      }
-    </style>
+    <link rel="stylesheet" href="praksadomasno.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
     <img src="slika.jpg" alt="slika" width="300px" height="300px" /
     style="border-radius: 50%;">
     <div>
-      <h2>Kiril Bozinovski</h2>
-      <p><b>Front-end Programer</b></p>
+      <h2 class="a">Kiril Bozinovski</h2>
+      <p class="b"><b>Front-end Programer</b></p>
       <hr />
-      <p>
+      <p class="c">
         <u>Address</u> : <sup>64</sup>Vasko Karangelevski,Bitola<sub>7000</sub>
       </p>
-      <p>
-        <u>Phone number</u> : <b><a href="tel:+38975361555">075/361-555</a></b>
+      <p class="c">
+        <u>Phone number</u> :
+        <b
+          ><a href="tel:+38975361555"><button>075/361-555</button></a></b
+        >
       </p>
-      <p>
-        <u>Email</u> :
+      <p class="c">
+        <u>Email :</u>
         <a href="mailto:kiril.bozinovski28@gmail.com" target="_blank"
           >kiril.bozinovski28@gmail.com</a
         >
@@ -36,14 +35,16 @@
     <br />
 
     <hr width="297" align="left" />
-    <p>
-      I'm new at this but i want to say something<br />
-      I will try my best to become a good <mark>PROGRAMER</mark><br />
-    </p>
-    <p>
-      Јас сум нов во ова но сакам да кажам нешто<br />
-      Ќе направам се што можам за да постанам добар <mark>ПРОГРАМЕР</mark>
-    </p>
-    <hr width="450px" align="left" />
+    <div id="a">
+      <p>
+        I'm new at this but i want to say something<br />
+        I will try my best to become a good <mark>PROGRAMER</mark><br />
+      </p>
+      <p>
+        Јас сум нов во ова но сакам да кажам нешто<br />
+        Ќе направам се што можам за да постанам добар <mark>ПРОГРАМЕР</mark>
+      </p>
+      <hr width="450px" align="left" />
+    </div>
   </body>
 </html>
