--- a/praksadomasno.html
+++ b/praksadomasno.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <img src="slika.jpg" alt="slika" width="300px" height="300px" /
-    style="border-radius: 50%;">
+    <img src="slika.jpg" alt="slika" width="300px" height="300px" />
     <div>
       <h2 class="a">Kiril Bozinovski</h2>
       <p class="b"><b>Front-end Programer</b></p>
